--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
 }
 body {
-  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+  background-image: linear-gradient(120deg, #9fa0ff 0%, #0620b3 100%);
   color: white;
   font-family: "Poppins", sans-serif;
   min-height: 100vh;
@@ -27,21 +27,24 @@ form button {
   font-size: 2rem;
   border: none;
   background: white;
+  border-radius: 20px 0px 0px 20px ;
 }
 form button {
-  color: #ff6f47;
+  color: #0620b3;
   background: #f7fffe;
   cursor: pointer;
   transition: all 0.3s ease;
+  border-radius: 0px 20px 20px 0px ;
 }
 form button:hover {
-  background: #ff6f47;
+  background: #0620b3;
   color: white;
 }
 .todo-container {
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 20px;
 }
 
 .todo-list {
@@ -58,9 +61,11 @@ form button:hover {
   justify-content: space-between;
   align-items: center;
   transition: all 1s ease;
+  border-radius: 20px;
 }
 .filter-todo {
   padding: 1rem;
+  border-radius: 20px;
 }
 .todo li {
   flex: 1;
@@ -68,15 +73,18 @@ form button:hover {
 
 .trash-btn,
 .complete-btn {
-  background: #ff6f47;
+  background: #fd1010;
   color: white;
   border: none;
   padding: 1rem;
   cursor: pointer;
   font-size: 1rem;
 }
+.trash-btn{
+  border-radius: 0px 20px 20px 0px;
+}
 .complete-btn {
-  background: rgb(11, 212, 162);
+  background: rgb(0, 226, 102);
 }
 .todo-item {
   padding: 0rem 0.5rem;
@@ -114,9 +122,10 @@ select {
   margin: 1rem;
   position: relative;
   overflow: hidden;
+  border-radius: 20px;
 }
 select {
-  color: #ff6f47;
+  color: #0620b3;
   font-family: "Poppins", sans-serif;
   cursor: pointer;
   width: 12rem;
@@ -128,7 +137,7 @@ select {
   top: 0;
   right: 0;
   padding: 1rem;
-  background: #ff6f47;
+  background: #0620b3;
   cursor: pointer;
   pointer-events: none;
 }
