--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -27,19 +26,20 @@ form button {
   font-size: 2rem;
   border: none;
   background: white;
-  border-radius: 20px 0px 0px 20px ;
+  border-radius: 20px 0px 0px 20px;
 }
 form button {
   color: #0620b3;
   background: #f7fffe;
   cursor: pointer;
   transition: all 0.3s ease;
-  border-radius: 0px 20px 20px 0px ;
+  border-radius: 0px 20px 20px 0px;
 }
 form button:hover {
   background: #0620b3;
   color: white;
 }
+
 .todo-container {
   display: flex;
   justify-content: center;
@@ -80,7 +80,7 @@ form button:hover {
   cursor: pointer;
   font-size: 1rem;
 }
-.trash-btn{
+.trash-btn {
   border-radius: 0px 20px 20px 0px;
 }
 .complete-btn {
@@ -147,3 +147,69 @@ select {
   transform: scale(1.5);
 }
 */
+
+@media (max-width: 584px) {
+  form input {
+    width: 50vw;
+    font-size: 20px;
+    margin-left: 20px;
+  }
+
+  form button {
+    font-size: 20px;
+  }
+
+  .select::after {
+    content: "\25BC";
+    position: absolute;
+    top: -3px;
+    right: 0;
+    padding: 14px;
+    background: #0620b3;
+    cursor: pointer;
+    pointer-events: none;
+  }
+
+  .select {
+    width: 50vw;
+    height: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: small;
+  }
+
+  .trash-btn,
+  .complete-btn {
+    background: #fd1010;
+    color: white;
+    border: none;
+    padding: 1rem;
+    cursor: pointer;
+    
+  }
+  .trash-btn {
+    border-radius: 0px 20px 20px 0px;
+  }
+  .complete-btn {
+    background: rgb(0, 226, 102);
+  }
+
+  .todo {
+    margin: 0.5rem;
+    background: white;
+    font-size: 1.0rem;
+    color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: all 1s ease;
+    border-radius: 20px;
+    overflow-y: hidden;
+  }
+
+  .todo-item{
+    overflow-x: scroll;
+  }
+
+}
